# implicit_fisher

./: CMakeLists.txt  README.md
cmake/petsc/: FindPETSC.cmake  FindPkgconfigLibrariesAbsolutePath.cmake  LibrariesAbsolutePath.cmake
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt  makefile.orig  plotting.py  readme.md  test.sh
src/petsc/: AppCtx.h  CMakeLists.txt  appctx.h  dump.cpp  dump.h  main.c  main.cpp  monitor.c  monitor.h  readme.md  system.c  system.cpp  system.h
utils/: petsc_config_base.py  petsc_config_cuda.py  petsc_config_p4est.py  readme.md
